@@ -1,3 +1,8 @@
+2013-12-03   H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/59363
+	* gcc.target/i386/pr59363.c: New file.
+
 2013-12-03  Marek Polacek  <polacek@redhat.com>
 
 	PR c/59351
